Progress on MNIST and 1D Maze reinforcement learning

--- a/experiment/model_rewrite.ipynb
+++ b/experiment/model_rewrite.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,18 +105,19 @@
     "        self.my_test_count += 1\n",
     "        tf.print(\"Train step\", self.my_test_count)\n",
     "        \n",
+    "        print(\"Train step from python\")\n",
+    "        \n",
     "        return {metric.name: metric.result() for metric in self.metrics}\n",
     "    \n",
     "    \n",
     "    def fit(self, *args, **kwargs):\n",
     "        # Method 1: Modify batch size here to size of dataset, divide in train step\n",
-    "        return super(NTaskModel, self).fit(*args, **kwargs)\n",
-    "        "
+    "        return super(NTaskModel, self).fit(*args, **kwargs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,13 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train step from python\n",
+      "Train step from python\n",
       "Train step 2\n",
       "Train step 2\n",
       "Train step 2\n",
@@ -163,10 +166,10 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fdf04f210d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fa1233a0410>"
       ]
      },
-     "execution_count": 507,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
