Critical bug identified. Model rewrite begin. Successful implementation of custom data handler into new model

--- a/1d_maze.ipynb
+++ b/1d_maze.ipynb
@@ -118,7 +118,7 @@
     "    \n",
     "    def init_model(self):\n",
     "        inp = Input((self.maze_size,))\n",
-    "#         x = Dense(256, activation=\"relu\")(inp)\n",
+    "        x = Dense(256, activation=\"relu\")(inp)\n",
     "#         x = Context(AtrMovingAverage(num_tasks=len(self.goals)))(x)\n",
     "        x = Dense(2, activation=\"linear\")(inp)\n",
     "#         self.model = NTaskModel(inputs=inp, outputs=x, loss_fn=loss_fn, optimizer=optimizer)\n",
