--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -709,7 +709,7 @@
     "\n",
     "## n-task: x, 9 - x\n",
     "\n",
-    "Task 1: Determine the value in the image. <br>|\n",
+    "Task 1: Determine the value in the image. <br>\n",
     "Task 2: Determine the value in the image and subtract it from 9"
    ]
   },
@@ -864,7 +864,11 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
