Refactored class names and some attributes to be more meaningful

--- a/4. Maze.ipynb
+++ b/4. Maze.ipynb
@@ -13,22 +13,12 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from ntask.atrs import AtrModel, TdErrorSwitch\n",
-    "from ntask.callbacks import AtrLogger\n",
-    "from ntask.layers import Context\n",
-    "from ntask.models import NTaskModel\n",
-    "from ntask.flags import Verbosity\n",
-    "from ntask.utils import set_seed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.python.framework.ops import disable_eager_execution\n",
-    "disable_eager_execution()"
+    "from keras_context.switches import SwitchModel, TdErrorSwitch\n",
+    "from keras_context.callbacks import ContextLogger\n",
+    "from keras_context.layers import Context\n",
+    "from keras_context.models import ContextModel\n",
+    "from keras_context.flags import Verbosity\n",
+    "from keras_context.utils import set_seed"
    ]
   },
   {
@@ -120,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TdErrorSwitch(AtrModel):\n",
+    "class TdErrorSwitch(SwitchModel):\n",
     "    def __init__(self, learn_rate, switch_threshold, add_threshold=0.0, max_contexts=0, switch_threshold_init=None, switch_threshold_learn_rate=0.0, switch_delay=0, init_multiplier=1.0):\n",
     "        super(TdErrorSwitch, self).__init__(switch_threshold, add_threshold, max_contexts, switch_delay)\n",
     "        self.learn_rate = learn_rate\n",
@@ -128,12 +118,12 @@
     "        self.switch_learn_rate = switch_threshold_learn_rate\n",
     "        self.init_multiplier = init_multiplier\n",
     "    \n",
-    "    def update_atr_value(self, context_loss, switched):\n",
-    "        if switched or not self.values_initialized[self.hot_context]:\n",
-    "            self.set_atr_value(self.init_multiplier*context_loss)\n",
+    "    def update_context_loss(self, context_loss, switched):\n",
+    "        if switched or not self.losses_initialized[self.hot_context]:\n",
+    "            self.set_context_loss(self.init_multiplier*context_loss)\n",
     "        else:\n",
-    "            delta = context_loss - self.values[self.hot_context]\n",
-    "            self.set_atr_value(self.values[self.hot_context] + self.learn_rate*delta)"
+    "            delta = context_loss - self.losses[self.hot_context]\n",
+    "            self.set_context_loss(self.losses[self.hot_context] + self.learn_rate*delta)"
    ]
   },
   {
@@ -347,7 +337,7 @@
     "x = Dense(1, activation=\"linear\", use_bias=True)(x)\n",
     "\n",
     "# Create the model\n",
-    "model = NTaskModel(inputs=inp, outputs=x)\n",
+    "model = ContextModel(inputs=inp, outputs=x)\n",
     "\n",
     "# Compile the model\n",
     "model.compile(loss=tf.keras.losses.MeanSquaredError(), optimizer=optimizer)"
@@ -373,7 +363,7 @@
     "move_limit = 30\n",
     "\n",
     "# episodes = 300\n",
-    "logger = AtrLogger(track_epochs_internally=True)\n",
+    "logger = ContextLogger(track_epochs_internally=True)\n",
     "callbacks = [logger]\n",
     "\n",
     "subOptMoves = []"
@@ -381,9 +371,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Switched to goal: 5 at epoch 1\n",
+      "Switched to goal: 0 at epoch 501\n",
+      "501/3000\n",
+      "[context] (no retry) Switched context to 1\n",
+      "Switched to goal: 1 at epoch 1001\n",
+      "1001/3000\n",
+      "[context] (no retry) Switched context to 2\n",
+      "Switched to goal: 5 at epoch 1501\n",
+      "1501/3000\n",
+      "[context] (no retry) Switched context to 0\n",
+      "Switched to goal: 0 at epoch 2001\n",
+      "2001/3000\n",
+      "[context] (no retry) Switched context to 1\n",
+      "Switched to goal: 1 at epoch 2501\n",
+      "2503/3000\n",
+      "[context] (no retry) Switched context to 2\n",
+      "3000/3000\r"
+     ]
+    }
+   ],
    "source": [
     "subOptMoves += train(model, maze_size, goals, move_limit, 3000, learn_rate, discount_factor, epsilon, switch_freq=500, auto_switch=True, shuffle=False, callbacks=callbacks)"
    ]
