Additional MNIST data

--- a/1. Logic Gates.ipynb
+++ b/1. Logic Gates.ipynb
@@ -1096,7 +1096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Static n-task Loss Over Time\n",
+    "### 5. Static Benchmark\n",
     "\n",
     "This runs the static n-task logic gate experiment some number of times and calculates various statistics regarding the loss over time.\n",
     "\n",
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
        "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
