--- a/2. MNIST.ipynb
+++ b/2. MNIST.ipynb
@@ -13,15 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.layers import Input, Dense, Flatten, Conv2D, MaxPooling2D, Dropout\n",
-    "\n",
-    "import tensorflow_datasets as tfds\n",
     "\n",
     "import datetime\n",
     "import numpy as np\n",
@@ -39,6 +37,27 @@
     "from keras_context.models import ContextModel\n",
     "from keras_context.training import train, evaluate\n",
     "from keras_context.utils import set_seed, idx_load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'),\n",
+       " PhysicalDevice(name='/physical_device:XLA_CPU:0', device_type='XLA_CPU')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.config.list_physical_devices()"
    ]
   },
   {
@@ -1111,7 +1130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
